@@ -24,6 +24,9 @@ import java.io.PrintWriter;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.ResourceBundle;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.UUID;
 
@@ -133,7 +136,6 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
     //null is valid. It indicates parts that are not attached to units.
     protected Unit unit;
-    protected UUID unitId;
 
     protected int quality;
 
@@ -145,7 +147,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
     protected int shorthandedMod;
 
     /** This tracks the unit which resorved the part for a refit */
-    private UUID refitId;
+    private Unit refitUnit;
     /** The unique identifier of the tech who is reserving this part for overnight work */
     private Person reservedBy;
     //temporarily mark the part used by current refit planning
@@ -202,10 +204,8 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         this.skillMin = SkillType.EXP_GREEN;
         this.mode = WorkTime.NORMAL;
         this.timeSpent = 0;
-        this.unitId = null;
         this.workingOvertime = false;
         this.shorthandedMod = 0;
-        this.refitId = null;
         this.usedForRefitPlanning = false;
         this.daysToArrival = 0;
         this.campaign = c;
@@ -263,10 +263,6 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
     public int getId() {
         return id;
-    }
-
-    public UUID getUnitId() {
-        return unitId;
     }
 
     public void setCampaign(Campaign c) {
@@ -372,17 +368,14 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         this.omniPodded = omniPod;
     }
 
-    public Unit getUnit() {
+    public @Nullable Unit getUnit() {
         return unit;
     }
 
-    public void setUnit(Unit u) {
-        this.unit = u;
+    public void setUnit(@Nullable Unit u) {
+        unit = u;
         if (null != unit) {
-            unitId = unit.getId();
             unitTonnage = (int) unit.getEntity().getWeight();
-        } else {
-            unitId = null;
         }
     }
 
@@ -623,10 +616,10 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
             .append(skillMin)
             .append("</skillMin>")
             .append(NL);
-        if (null != unitId) {
+        if (null != unit) {
             builder.append(level1)
                 .append("<unitId>")
-                .append(unitId)
+                .append(unit.getId())
                 .append("</unitId>")
                 .append(NL);
         }
@@ -644,10 +637,10 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
                 .append("</shorthandedMod>")
                 .append(NL);
         }
-        if (refitId != null) {
+        if (refitUnit != null) {
             builder.append(level1)
                 .append("<refitId>")
-                .append(refitId)
+                .append(refitUnit.getId())
                 .append("</refitId>")
                 .append(NL);
         }
@@ -755,7 +748,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         Part retVal = null;
         try {
             // Instantiate the correct child class, and call its parsing function.
-            retVal = (Part) Class.forName(className).newInstance();
+            retVal = (Part) Class.forName(className).getDeclaredConstructor().newInstance();
             retVal.loadFieldsFromXmlNode(wn);
 
             // Okay, now load Part-specific fields!
@@ -790,13 +783,13 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
                     }
                 } else if (wn2.getNodeName().equalsIgnoreCase("unitId")) {
                     if (!wn2.getTextContent().equals("null")) {
-                        retVal.unitId = UUID.fromString(wn2.getTextContent());
+                        retVal.unit = new PartUnitRef(UUID.fromString(wn2.getTextContent()));
                     }
                 } else if (wn2.getNodeName().equalsIgnoreCase("shorthandedMod")) {
                     retVal.shorthandedMod = Integer.parseInt(wn2.getTextContent());
                 } else if (wn2.getNodeName().equalsIgnoreCase("refitId")) {
                     if (!wn2.getTextContent().equals("null")) {
-                        retVal.refitId = UUID.fromString(wn2.getTextContent());
+                        retVal.refitUnit = new PartUnitRef(UUID.fromString(wn2.getTextContent()));
                     }
                 } else if (wn2.getNodeName().equalsIgnoreCase("daysToArrival")) {
                     retVal.daysToArrival = Integer.parseInt(wn2.getTextContent());
@@ -824,7 +817,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
             }
 
             // Refit protection of unit id
-            if (retVal.unitId != null && retVal.refitId != null) {
+            if (retVal.unit != null && retVal.refitUnit != null) {
                 retVal.setUnit(null);
             }
         } catch (Exception ex) {
@@ -1060,7 +1053,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
      * performing overnight.
      * @param tech The team member.
      */
-    public void setReserveId(@Nullable Person tech) {
+    public void setReservedBy(@Nullable Person tech) {
         this.reservedBy = tech;
     }
 
@@ -1230,25 +1223,31 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
     /**
      * Sets the unit which has reserved this part for a refit.
-     * @param unitId The unique identifier of the unit.
+     * @param unit The unit reserving this part for a refit.
      */
-    public void setRefitId(UUID unitId) {
-        refitId = unitId;
+    public void setRefitUnit(@Nullable Unit unit) {
+        refitUnit = unit;
     }
 
     /**
-     * Gets the unique identifier of the unit which reserved
-     * this part for a refit.
-     * @return The unique identifier of the unit reserving this part.
+     * Gets the unit which reserved this part for a refit.
+     * @return The unit reserving this part.
      */
-    public UUID getRefitId() {
-        return refitId;
+    public @Nullable Unit getRefitUnit() {
+        return refitUnit;
     }
 
+    /**
+     * Gets a value indicating if the part is reserved for a refit.
+     */
     public boolean isReservedForRefit() {
-        return refitId != null;
+        return refitUnit != null;
     }
 
+    /**
+     * Gets a value indicating if the part is reserved for an
+     * overnight replacement task.
+     */
     public boolean isReservedForReplacement() {
         return reservedBy != null;
     }
@@ -1261,22 +1260,24 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         usedForRefitPlanning = flag;
     }
 
+    /**
+     * Sets the number of days until the part arrives.
+     * @param days The number of days until the part arrives.
+     */
     public void setDaysToArrival(int days) {
-        daysToArrival = days;
+        daysToArrival = Math.max(days, 0);
     }
 
+    /**
+     * Gets the number of days until the part arrives.
+     */
     public int getDaysToArrival() {
         return daysToArrival;
     }
 
-    public boolean checkArrival() {
-        if (daysToArrival > 0) {
-            daysToArrival--;
-            return (daysToArrival == 0);
-        }
-        return false;
-    }
-
+    /**
+     * Gets a value indicating whether or not the part is present.
+     */
     public boolean isPresent() {
         return daysToArrival == 0;
     }
@@ -1301,17 +1302,36 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         return true;
     }
 
+    /**
+     * Gets the number of parts on-hand.
+     */
     public int getQuantity() {
         return quantity;
     }
 
+    /**
+     * Increments the number of parts in stock by one.
+     */
     public void incrementQuantity() {
-        quantity++;
+        setQuantity(getQuantity() + 1);
     }
 
+    /**
+     * Decrements the number of parts in stock by one,
+     * and removes the part from the campaign if it
+     * reaches zero.
+     */
     public void decrementQuantity() {
-        quantity--;
-        if (quantity <= 0) {
+        setQuantity(getQuantity() - 1);
+    }
+
+    /**
+     * A method to set the number of parts en masse.
+     * @param number The new number of spares in the pile.
+     */
+    public void setQuantity(int number) {
+        quantity = Math.max(number, 0);
+        if (quantity == 0) {
             for (Part childPart : childParts) {
                 campaign.removePart(childPart);
             }
@@ -1320,23 +1340,12 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
     }
 
     /**
-     * A method to set the number of parts en masse
-     * @param number The new number of spares in the pile
+     * Gets a value indicating whether or not this is a spare part.
      */
-    public void setQuantity(int number) {
-        quantity = number;
-        if (quantity <= 0) {
-            for (Part childPart : childParts) {
-                campaign.removePart(childPart);
-            }
-            campaign.removePart(this);
-        }
-    }
-
     public boolean isSpare() {
-        return (unitId == null)
+        return (unit == null)
             && (parentPart == null)
-            && (refitId == null)
+            && (refitUnit == null)
             && (reservedBy == null);
     }
 
@@ -1421,32 +1430,67 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
     public abstract String getLocationName();
 
-    public void setParentPart(Part part) {
+    /**
+     * Sets the parent part.
+     * @param part The parent part.
+     */
+    public void setParentPart(@Nullable Part part) {
         parentPart = part;
     }
 
-    public Part getParentPart() {
+    /**
+     * Gets the parent part, or null if none exists.
+     */
+    public @Nullable Part getParentPart() {
         return parentPart;
     }
 
+    /**
+     * Gets a value indicating whether or not this part
+     * has a parent part.
+     */
     public boolean hasParentPart() {
         return parentPart != null;
     }
 
-    public ArrayList<Part> getChildParts() {
-        return childParts;
+    /**
+     * Gets a value indicating whether or not this part has child parts.
+     */
+    public boolean hasChildParts() {
+        return !childParts.isEmpty();
     }
 
-    public void addChildPart(Part child) {
-        childParts.add(child);
-        child.setParentPart(this);
+    /**
+     * Gets a list of child parts for this part.
+     */
+    public List<Part> getChildParts() {
+        return Collections.unmodifiableList(childParts);
     }
 
+    /**
+     * Adds a child part to this part.
+     * @param childPart The part to add as a child.
+     */
+    public void addChildPart(Part childPart) {
+        childParts.add(Objects.requireNonNull(childPart));
+        childPart.setParentPart(this);
+    }
+
+    /**
+     * Removes a child part from this part.
+     * @param childPart The child part to remove.
+     */
     public void removeChildPart(Part childPart) {
-        childPart.setParentPart(null);
-        childParts.remove(childPart);
+        Objects.requireNonNull(childPart);
+
+        if (childParts.remove(childPart)) {
+            childPart.setParentPart(null);
+        }
     }
 
+    /**
+     * Removes all child parts from this part.
+     */
     public void removeAllChildParts() {
         for (Part childPart : childParts) {
             childPart.setParentPart(null);
@@ -1743,7 +1787,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
     public void fixReferences(Campaign campaign) {
         if (replacementPart instanceof PartRef) {
             int id = replacementPart.getId();
-            replacementPart = campaign.getPart(id);
+            replacementPart = campaign.getWarehouse().getPart(id);
             if ((replacementPart == null) && (id > 0)) {
                 MekHQ.getLogger().error(
                     String.format("Part %d ('%s') references missing replacement part %d",
@@ -1753,7 +1797,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
         if (parentPart instanceof PartRef) {
             int id = parentPart.getId();
-            parentPart = campaign.getPart(id);
+            parentPart = campaign.getWarehouse().getPart(id);
             if ((parentPart == null) && (id > 0)) {
                 MekHQ.getLogger().error(String.format("Part %d ('%s') references missing parent part %d",
                         getId(), getName(), id));
@@ -1763,7 +1807,7 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
         for (int ii = childParts.size() - 1; ii >= 0; --ii) {
             Part childPart = childParts.get(ii);
             if (childPart instanceof PartRef) {
-                Part realPart = campaign.getPart(childPart.getId());
+                Part realPart = campaign.getWarehouse().getPart(childPart.getId());
                 if (realPart != null) {
                     childParts.set(ii, realPart);
                 } else if (childPart.getId() > 0) {
@@ -1787,6 +1831,26 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
             reservedBy = campaign.getPerson(id);
             if (reservedBy == null) {
                 MekHQ.getLogger().error(String.format("Part %d ('%s') references missing tech (reservation) %s",
+                        getId(), getName(), id));
+            }
+        }
+
+        if (unit instanceof PartUnitRef) {
+            UUID id = unit.getId();
+            unit = campaign.getUnit(id);
+            if (unit == null) {
+                MekHQ.getLogger().error(
+                    String.format("Part %d ('%s') references missing unit %s",
+                        getId(), getName(), id));
+            }
+        }
+
+        if (refitUnit instanceof PartUnitRef) {
+            UUID id = refitUnit.getId();
+            refitUnit = campaign.getUnit(id);
+            if (refitUnit == null) {
+                MekHQ.getLogger().error(
+                    String.format("Part %d ('%s') references missing refit unit %s",
                         getId(), getName(), id));
             }
         }
@@ -1885,6 +1949,13 @@ public abstract class Part implements Serializable, MekHqXmlSerializable, IPartW
 
         private PartPersonRef(UUID id) {
             super(id);
+        }
+    }
+
+    public static class PartUnitRef extends Unit {
+
+        private PartUnitRef(UUID id) {
+            setId(id);
         }
     }
 }
